feat: add eslint

--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "author": "harley",
   "license": "ISC",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "chalk": "^4.1.0",
     "commander": "^7.2.0",
     "didyoumean": "^1.2.1",
     "download-git-repo": "^3.0.2",
+    "eslint": "^7.23.0",
     "execa": "^5.0.0",
     "husky": "^6.0.0",
     "inquirer": "^8.0.0",
