--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "update-notifier": "^5.1.0",
     "validate-npm-package-name": "^3.0.0"
   },
+  "engines": {
+    "node": ">=8.9"
+  },
   "lint-staged": {
     "*.{js,css,md}": "prettier --write"
   },
